deployment.yaml
---
apiVersion: v1
kind: Pod
metadata:
  metadata.gatekeeper.sh/title: "Allowed Repositories"
  metadata.gatekeeper.sh/version: 1.0.1
  description: >-
    Requires container images to begin with a string from the specified list.
  name: rss-site
  labels:
    app: web
spec:
  containers:
    - name: front-end
      image: ghcr.io/kadirgokhann/dummyapp:latest
      ports:
        - containerPort: 80
